---
source: quil-rs/src/program/calibration.rs
expression: calibrated_program.to_quil_or_debug()
---
DEFCAL MEASURE 0 addr:
    PRAGMA CORRECT
DEFCAL MEASURE q addr:
    PRAGMA INCORRECT_PRECEDENCE
DEFCAL MEASURE 1 addr:
    PRAGMA INCORRECT_QUBIT
DEFCAL MEASURE q:
    PRAGMA INCORRECT_RECORD_VS_EFFECT
PRAGMA CORRECT
